<resources>
    <string name="app_name">Xl Keyboard</string>
    <string name="xl_keyboard_setup">Xl Keyboard Setup</string>
    <string name="_1_enable_keyboard">\ \ 1. Enable Keyboard\ \ </string>
    <string name="_2_select_keyboard">\ \ 2. Select Keyboard\ \ </string>
    <string name="created_by_kotru143_gmail_com">Created by kotru143@gmail.com</string>

    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_up">▲</string>
    <string name="key_left">◀</string>
    <string name="key_right">▶</string>
    <string name="key_slash">/</string>
    <string name="key_percentage">%</string>
    <string name="key_exclamation">!</string>
    <string name="key_lessThan">&lt;</string>
    <string name="key_greatThan">&gt;</string>

    <string name="key_hash">#</string>
    <string name="key_rupee">₹</string>
    <string name="key_amp">&amp;</string>


    <string name="key_equals">=</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_asterisk">*</string>
    <string name="key_quoteSingle">\'</string>
    <string name="key_quote">\"</string>
    <string name="key_colon">:</string>
    <string name="key_semicolon">;</string>
    <string name="key_at">\@</string>
    <string name="key_leftPar">(</string>
    <string name="key_rightPar">)</string>

    <string name="key_down">▼</string>
    <string name="key_backspace">⌫</string>
    <string name="key_question">\?</string>
    <string name="key_enter">⏎</string>
    <string name="key_toggle_arrow">⇄</string>
    <string name="key_toggle_tab">TAB</string>
    <string name="key_dot">.</string>
    <string name="key_abc">ABC</string>
    <string name="key_sym">SYM</string>
    <string name="key_auto">auto</string>

    <string name="key_123">123</string>

    <string name="key_space">␣</string>
    <string name="key_comma">,</string>

    <string name="key_a">a</string>
    <string name="key_b">b</string>
    <string name="key_c">c</string>
    <string name="key_d">d</string>
    <string name="key_e">e</string>
    <string name="key_f">f</string>
    <string name="key_g">g</string>
    <string name="key_h">h</string>
    <string name="key_i">i</string>
    <string name="key_j">j</string>
    <string name="key_k">k</string>
    <string name="key_l">l</string>
    <string name="key_m">m</string>
    <string name="key_n">n</string>
    <string name="key_o">o</string>
    <string name="key_p">p</string>
    <string name="key_q">q</string>
    <string name="key_r">r</string>
    <string name="key_s">s</string>
    <string name="key_t">t</string>
    <string name="key_u">u</string>
    <string name="key_v">v</string>
    <string name="key_w">w</string>
    <string name="key_x">x</string>
    <string name="key_y">y</string>
    <string name="key_z">z</string>
    <string name="key_shift">⇧</string>

</resources>

